// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<button
  data-size="sm"
  data-variant="tertiary"
  type="button"
>
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12.53 4.47a.75.75 0 0 0-1.06 0l-3.5 3.5a.75.75 0 0 0 1.06 1.06L12 6.06l2.97 2.97a.75.75 0 1 0 1.06-1.06zm-3.5 10.5a.75.75 0 0 0-1.06 1.06l3.5 3.5a.75.75 0 0 0 1.06 0l3.5-3.5a.75.75 0 1 0-1.06-1.06L12 17.94z"
      fill="currentColor"
      fill-rule="evenodd"
    >
    </path>
  </svg>
  Åpne alle
</button>
<br>
<details data-variant="default">
  <summary>
    Hva er Feide?
  </summary>
  <div>
    <p>
      Feide er den nasjonale løsningen for trygg innlogging og datadeling i utdanning og forskning.
    </p>
    <p>
      Svært mange av de digitale læremidlene og tjenestene som er i bruk i norsk utdanning, har Feide som innloggingsløsning.
    </p>
    <p>
      Med en Feide-bruker bruker elever, studenter, forskere og undervisere ett og samme brukernavn og passord til å logge inn på alle tjenester som har Feide som innloggingsløsning. De slipper med andre ord å huske ulike brukernavn og passord for ulike tjenester.
    </p>
  </div>
</details>
<details data-variant="default">
  <summary>
    Hva er UIDP?
  </summary>
  <div>
    <p>
      UIDP er Udirs nye løsning for identitets- og tilgangskontroll.
    </p>
    <p>
      Løsningen har som formål å sørge for sikker og lettfattelig pålogging for brukere til Utdanningsdirektoratets tjenester og å sørge for sikker maskintilgang til Utdanningsdirektoratets API-er. UIDP benyttes av over 30 systemer i Utdanningsdirektoratet og en betydelig mengde brukere fra sektor er registrert i systemet. I 2019 hadde UIDP over 3 millioner pålogginger.
    </p>
    <p>
      Brukere kan logge inn med tre forskjellige identitetsleverandører: Feide, ID-porten og en lokal løsning der brukerne bare ligger i UIDP. Den lokale løsningen benyttes av elever og kandidater som ikke bruker Feide.
    </p>
    <p>
      UIDP er også integrert med Udir sin gamle påloggingsløsning UBAS.
    </p>
  </div>
</details>
<details data-variant="default">
  <summary>
    Hva er UBAS?
  </summary>
  <div>
    <p>
      UBAS er Udirs gamle løsning for identitets- og tilgangskontroll. Fra 2022 blir UBAS gradvis faset ut og erstattet med nyere fellesløsninger (UIDP, Feide, ID-porten, Altinn Autorisasjon).
    </p>
    <p>
      Etter overgang til nye løsninger vil tildeling av roller og tjenestetilganger som hovedregel gjøres i Altinn, og ikke lenger i UBAS.
    </p>
  </div>
</details>
`;

exports[`In Card 1`] = `
<div
  data-color="neutral"
  data-variant="default"
>
  <details data-variant="default">
    <summary>
      Vedlegg
    </summary>
    <div>
      <ul>
        <li>
          Vedlegg 1:
          <a
            href="#"
            target="_blank"
          >
            Regler og retningslinjer.pdf
          </a>
        </li>
        <li>
          Vedlegg 2:
          <a
            href="#"
            target="_blank"
          >
            Brevmal.docx
          </a>
        </li>
        <li>
          Vedlegg 3:
          <a
            href="#"
            target="_blank"
          >
            Illustrasjoner.zip
          </a>
        </li>
      </ul>
    </div>
  </details>
</div>
`;

exports[`In Card With Color 1`] = `
<div
  data-color="accent"
  data-variant="tinted"
>
  <details data-variant="default">
    <summary>
      Kva er nasjonale prøver?
    </summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </details>
  <details data-variant="default">
    <summary>
      Korleis skal nasjonale prøver brukast?
    </summary>
    <div>
      <ul>
        <li>
          Lærarane skal bruke resultata for å følgje opp elevane sine og i arbeidet med undervegsvurdering og tilpassa opplæring.
        </li>
        <li>
          Kommunar og skolar skal bruke resultata som grunnlag for kvalitetsutvikling i opplæringa.
        </li>
        <li>
          Forskarar kan søkje om å få utlevert resultat frå nasjonale prøver til bruk i forsking.
        </li>
      </ul>
    </div>
  </details>
</div>
`;

exports[`Preview 1`] = `
<details data-variant="default">
  <summary>
    Kva er nasjonale prøver?
  </summary>
  <div>
    Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
  </div>
</details>
`;

exports[`Pseudo States 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-4);">
  <label
    data-size="sm"
    data-weight="medium"
  >
    Default
  </label>
  <details data-variant="default">
    <summary>
      Kva er nasjonale prøver?
    </summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </details>
  <label
    data-size="sm"
    data-weight="medium"
  >
    Hover
  </label>
  <details data-variant="default">
    <summary>
      Kva er nasjonale prøver?
    </summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </details>
  <label
    data-size="sm"
    data-weight="medium"
  >
    Focused
  </label>
  <details data-variant="default">
    <summary>
      Kva er nasjonale prøver?
    </summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </details>
</div>
`;
